# backend/src/controllers/building/building.service.js
@@ -11,4 +11,4 @@ const Model = require('../../models/building.model');
 
 exports.update = (buildingId, className) => Model.findByIdAndUpdate(buildingId, className, { new: true });
 
-exports.getAll = () => Model.find().populate('Classroom');
+exports.getAll = () => Model.find().populate('classrooms');
