# backend/src/doc/swagger.yaml
@@ -302,7 +302,6 @@ components:
         - city
         - street
         - zipcode
-        - classroom
       properties:
         name:
           type: string
@@ -314,6 +313,15 @@ components:
           type: number
         classroom:
           type: array
+          items:
+            $ref: '#/components/schemas/Classroom'
+    Classroom:
+      type: object 
+      required:
+        - name
+      properties:
+        name:
+          type: string
     Error:
       type: object
       required:
